<resources>
    <string name="app_name">Github Submission</string>
    <string name="Avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="search">search</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="Setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="detail">Detail</string>
    <string name="logo">Logo</string>
</resources>